// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DirectionsSectionAndModal component when the student is in reflection renders on desktop 1`] = `
<DirectionsSectionAndModal
  activeStep={1}
  className=""
  handleReadTheDirectionsButtonClick={[Function]}
  inReflection={true}
  passage={
    Object {
      "highlight_prompt": "",
    }
  }
  showReadTheDirectionsButton={false}
>
  <div
    className=""
  >
    <section
      className="reflection-section"
    >
      <h3>
        Directions
      </h3>
      <p>
        Great! 
        <u>
          Now take a moment to reflect on the sentences you highlighted.
        </u>
      </p>
    </section>
  </div>
</DirectionsSectionAndModal>
`;

exports[`DirectionsSectionAndModal component when the student is on the read passage step renders 1`] = `
<DirectionsSectionAndModal
  activeStep={1}
  className=""
  handleReadTheDirectionsButtonClick={[Function]}
  inReflection={false}
  passage={
    Object {
      "highlight_prompt": "",
    }
  }
  showReadTheDirectionsButton={false}
>
  <div
    className=""
  >
    <section
      className="directions-section"
    >
      <h3>
        Directions
      </h3>
      <ul>
        <li>
          Use information from the text to finish the sentence.
        </li>
        <li>
          Put the information in your own words.
        </li>
      </ul>
    </section>
    <section
      className="task-section"
    >
      <h3>
        Task
      </h3>
      <p>
        As you read, highlight two sentences 
        <u />
      </p>
    </section>
  </div>
</DirectionsSectionAndModal>
`;

exports[`DirectionsSectionAndModal component when the student is past the read passage step renders on desktop 1`] = `
<DirectionsSectionAndModal
  activeStep={2}
  className=""
  handleReadTheDirectionsButtonClick={[Function]}
  inReflection={false}
  passage={
    Object {
      "highlight_prompt": "",
    }
  }
  showReadTheDirectionsButton={false}
>
  <section
    className="directions-section"
  >
    <h3>
      Directions
    </h3>
    <ul>
      <li>
        Use information from the text to finish the sentence.
      </li>
      <li>
        Put the information in your own words.
      </li>
    </ul>
  </section>
</DirectionsSectionAndModal>
`;

exports[`DirectionsSectionAndModal component when the student should see the modal renders on desktop 1`] = `
<DirectionsSectionAndModal
  activeStep={1}
  className=""
  handleReadTheDirectionsButtonClick={[Function]}
  inReflection={false}
  passage={
    Object {
      "highlight_prompt": "",
    }
  }
  showReadTheDirectionsButton={true}
>
  <div
    className=""
  >
    <section
      className="directions-section"
    >
      <h3>
        Directions
      </h3>
      <ul>
        <li>
          Use information from the text to finish the sentence.
        </li>
        <li>
          Put the information in your own words.
        </li>
      </ul>
    </section>
    <section
      className="task-section"
    >
      <h3>
        Task
      </h3>
      <p>
        As you read, highlight two sentences 
        <u />
      </p>
    </section>
  </div>
</DirectionsSectionAndModal>
`;
